--- a/src/bp-templates/bp-nouveau/sass/buddypress.scss
+++ b/src/bp-templates/bp-nouveau/sass/buddypress.scss
@@ -477,6 +477,8 @@ Hello, this is the BuddyPress Nouveau stylesheet.
 
 @import "../common-styles/_bp_media";
 
+@import "../common-styles/_codemirror";
+
 /**
 *-------------------------------------------------------------------------------
 * @section 15.0 - Media Dropzone
