--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1224,7 +1224,7 @@ div[class*="attached-gif-container"] .gif-play-button span.dashicons {
 }
 
 div[class*="attached-gif-container"] .gif-icon {
-  background: url(../images/gif-symbol.png) bottom left no-repeat;
+  background: url(../images/gif-symbol.png) bottom right no-repeat;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -11622,16 +11622,16 @@ span.icons:before {
   font-family: dashicons;
 }
 
-.bp-single-message-wrap.group-messages-highlight {
-  background: #fffced;
-  padding: 12px;
-  border: 1px solid #f9efca;
-  border-radius: 5px;
-}
-
 #bp-message-thread-list.group-message-thread .bp-single-message-wrap {
   padding-right: 12px;
   padding-left: 12px;
+}
+
+#bp-message-thread-list.group-message-thread .bp-single-message-wrap.group-messages-highlight {
+  background: #fffced;
+  padding: 12px 11px;
+  border: 1px solid #f9efca;
+  border-radius: 5px;
 }
 
 #group-messages-container .select2-container--default.select2-container--disabled .select2-selection--multiple {
