--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1224,7 +1224,7 @@ div[class*="attached-gif-container"] .gif-play-button span.dashicons {
 }
 
 div[class*="attached-gif-container"] .gif-icon {
-  background: url(../images/gif-symbol.png) bottom right no-repeat;
+  background: url(../images/gif-symbol.png) bottom left no-repeat;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -4917,6 +4917,7 @@ ul.bbp-stats .bbp-count {
   text-align: center;
   text-transform: none;
   width: 20%;
+  visibility: visible !important;
 }
 
 .buddypress-wrap form.bp-dir-search-form button[type="submit"] span,
