#266 - Destination Folder Location functionality added

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -637,6 +637,7 @@ span.dashicons.dashicons-admin-file:before {
 		display: block;
 		text-align: center;
 		margin: 10px 0;
+		animation: spin 2s infinite linear;
 	}
 	.document-description-wrap{
 		width: 100%;
