--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1680,89 +1680,186 @@ img.emojioneemoji {
 
 #bp-media-create-folder,
 #bp-media-edit-child-folder,
-#bp-media-create-child-folder,{
+#bp-media-create-child-folder{
 	#bb-folder-location{
 		display: none;
 	}
 	.bb-dropdown-wrap select{
 		width: 100%;
 	}
-	.bb-folder-location-select{
-		background-repeat: no-repeat;
-		background-position: right 1rem center;
-		display: inline-block;
-		font-family: inherit;
-		font-style: inherit;
-		font-size: 15px;
-		height: 40px;
-		outline: 0;
-		vertical-align: middle;
-		background-color: #fff;
-		border: 1px solid #dedfe2;
-		border-radius: 3px;
-		box-shadow: none;
-		color: #393e41;
-		display: block;
+	// .bb-folder-location-select{
+	// 	background-repeat: no-repeat;
+	// 	background-position: right 1rem center;
+	// 	display: inline-block;
+	// 	font-family: inherit;
+	// 	font-style: inherit;
+	// 	font-size: 15px;
+	// 	height: 40px;
+	// 	outline: 0;
+	// 	vertical-align: middle;
+	// 	background-color: #fff;
+	// 	border: 1px solid #dedfe2;
+	// 	border-radius: 3px;
+	// 	box-shadow: none;
+	// 	color: #393e41;
+	// 	display: block;
+	// 	position: relative;
+	// 	&:after{
+	// 		content: '<';
+	// 		color: #dedfe2;
+	// 		position: absolute;
+	// 		right: 1em;
+	// 		top: 50%;
+	// 		transform: translateY(-50%) rotate(-90deg);
+	// 		-webkit-transform: translateY(-50%) rotate(-90deg);
+	// 		-moz-transform: translateY(-50%) rotate(-90deg);
+	// 		pointer-events: none;
+	// 	}
+	// 	.bb-folder-location-selected{
+	// 		line-height: 1.6875rem;
+	// 		padding: 5px 40px 7px 10px;
+	// 		display: block;
+	// 	}
+	// 	.bb-folder-location-select-list{
+	// 		position: absolute;
+	// 		left: -1px;
+	// 		right: -1px;
+	// 		bottom: 40px;
+	// 		margin: 0;
+	// 		background-color: #fff;
+	// 		border-radius: 4px;
+	// 		box-shadow: 0 6px 24px 0 rgba(18,43,70,.08);
+	// 		list-style: none;
+	// 		display: none;
+	// 		max-height: 320px;
+	// 		max-height: 45vh;
+	// 		overflow: auto;
+	// 		padding: 0;
+	// 		z-index: 11;
+	// 		li{
+	// 			cursor: pointer;
+	// 			padding: 5px 10px;
+	// 			&:hover, &.selected{
+	// 				color: #007cff;
+	// 				background-color: #f5f5f5;
+	// 			}
+	// 			&:before{
+	// 				font-family: dashicons;
+	// 				content: "\f318";
+	// 			}
+	// 			&.folder_l_1_1{
+	// 				padding-left: 25px;
+	// 			}
+	// 			&.folder_l_1_1_1{
+	// 				padding-left: 50px;
+	// 			}
+	// 			&.folder_l_1_1_1_1{
+	// 				padding-left: 75px;
+	// 			}
+	// 			&.folder_l_1_1_1_1_1{
+	// 				padding-left: 100px;
+	// 			}
+	// 			&.folder_l_1_1_1_1_1_1{
+	// 				padding-left: 125px;
+	// 			}
+	// 		}
+	// 	}
+	// }
+	.location-folder-list-wrap-main{
 		position: relative;
 		&:after{
-			content: '<';
+			content: "\f347";
+			font-family: dashicons;
 			color: #dedfe2;
 			position: absolute;
 			right: 1em;
 			top: 50%;
-			transform: translateY(-50%) rotate(-90deg);
-			-webkit-transform: translateY(-50%) rotate(-90deg);
-			-moz-transform: translateY(-50%) rotate(-90deg);
 			pointer-events: none;
+			transform: translateY(-50%);
+			-webkit-transform: translateY(-50%);
+			-moz-transform: translateY(-50%);
 		}
-		.bb-folder-location-selected{
-			line-height: 1.6875rem;
-			padding: 5px 40px 7px 10px;
-			display: block;
+		.bb-folder-destination{
+			cursor: pointer;
 		}
-		.bb-folder-location-select-list{
+		.location-folder-list-wrap{
 			position: absolute;
-			left: -1px;
-			right: -1px;
 			bottom: 40px;
-			margin: 0;
-			background-color: #fff;
+			left: 0;
+			right: 0;
+			background-color: #ffff;
 			border-radius: 4px;
 			box-shadow: 0 6px 24px 0 rgba(18,43,70,.08);
-			list-style: none;
-			display: none;
-			max-height: 320px;
-			max-height: 45vh;
-			overflow: auto;
-			padding: 0;
 			z-index: 11;
-			li{
+			display: none;
+			.location-folder-title{
+				padding: 15px 0;
+				display: inline-block;
+				margin-left: 10px;
+				vertical-align: middle;
+			}
+			.location-folder-back{
+				display: none;
+				margin-left: 10px;
 				cursor: pointer;
-				padding: 5px 10px;
-				&:hover, &.selected{
-					color: #007cff;
-					background-color: #f5f5f5;
+				vertical-align: middle;
+				i{
+					display: inline-block;
+					vertical-align: middle;
 				}
-				&:before{
-					font-family: dashicons;
-					content: "\f318";
-				}
-				&.folder_l_1_1{
-					padding-left: 25px;
-				}
-				&.folder_l_1_1_1{
-					padding-left: 50px;
-				}
-				&.folder_l_1_1_1_1{
-					padding-left: 75px;
-				}
-				&.folder_l_1_1_1_1_1{
-					padding-left: 100px;
-				}
-				&.folder_l_1_1_1_1_1_1{
-					padding-left: 125px;
+			}
+			.location-folder-list{
+				overflow: auto;
+				max-height: 40vh;
+				min-height: 40vh;
+				list-style: none;
+				margin: 0;
+				padding: 0;
+				li{
+					position: relative;
+					span{
+						padding: 10px 15px;
+						border-bottom: 1px solid #ccc;
+						display: block;
+						cursor: pointer;
+						&:hover,&.selected{
+							background-color: #ccc;
+						}
+						:before{
+							font-family: dashicons;
+							content: "\f318";
+							vertical-align: middle;
+							margin-right: 5px
+						}	
+					}
+					&:hover > .sub-menu-anchor{
+						visibility: visible;
+						opacity: 1;
+					}
+					.sub-menu-anchor{
+						position: absolute;
+						right: 5px;
+						top: 50%;
+						bottom: 0;
+						background-color: #ccc;
+						padding: 2px 3px;
+						line-height: 1;
+						visibility: hidden;
+						opacity: 0;
+						cursor: pointer;
+						transform: translateY(-50%);
+						display: inline-block;
+						height: auto;
+						width: auto;
+					}
+					
+					ul{
+						display: none;
+						margin: 0;
+						list-style: none;
+					}
 				}
 			}
 		}
-	}
+	}	
 }
