--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1941,6 +1941,7 @@ span.dashicons.dashicons-admin-file:before {
   display: block;
   text-align: center;
   margin: 10px 0;
+  animation: spin 2s infinite linear;
 }
 
 .bb-activity-media-wrap .bb-activity-media-elem.document-activity .document-description-wrap {
@@ -11628,120 +11629,147 @@ img.emojioneemoji {
   width: 100%;
 }
 
-#bp-media-create-folder .bb-folder-location-select,
-#bp-media-edit-child-folder .bb-folder-location-select,
-#bp-media-create-child-folder .bb-folder-location-select {
-  background-repeat: no-repeat;
-  background-position: right 1rem center;
-  display: inline-block;
-  font-family: inherit;
-  font-style: inherit;
-  font-size: 15px;
-  height: 40px;
-  outline: 0;
-  vertical-align: middle;
-  background-color: #fff;
-  border: 1px solid #dedfe2;
-  border-radius: 3px;
-  box-shadow: none;
-  color: #393e41;
-  display: block;
+#bp-media-create-folder .location-folder-list-wrap-main,
+#bp-media-edit-child-folder .location-folder-list-wrap-main,
+#bp-media-create-child-folder .location-folder-list-wrap-main {
   position: relative;
 }
 
-#bp-media-create-folder .bb-folder-location-select:after,
-#bp-media-edit-child-folder .bb-folder-location-select:after,
-#bp-media-create-child-folder .bb-folder-location-select:after {
-  content: '<';
+#bp-media-create-folder .location-folder-list-wrap-main:after,
+#bp-media-edit-child-folder .location-folder-list-wrap-main:after,
+#bp-media-create-child-folder .location-folder-list-wrap-main:after {
+  content: "\f347";
+  font-family: dashicons;
   color: #dedfe2;
   position: absolute;
   right: 1em;
   top: 50%;
-  transform: translateY(-50%) rotate(-90deg);
-  -webkit-transform: translateY(-50%) rotate(-90deg);
-  -moz-transform: translateY(-50%) rotate(-90deg);
   pointer-events: none;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
 }
 
-#bp-media-create-folder .bb-folder-location-select .bb-folder-location-selected,
-#bp-media-edit-child-folder .bb-folder-location-select .bb-folder-location-selected,
-#bp-media-create-child-folder .bb-folder-location-select .bb-folder-location-selected {
-  line-height: 1.6875rem;
-  padding: 5px 40px 7px 10px;
-  display: block;
+#bp-media-create-folder .location-folder-list-wrap-main .bb-folder-destination,
+#bp-media-edit-child-folder .location-folder-list-wrap-main .bb-folder-destination,
+#bp-media-create-child-folder .location-folder-list-wrap-main .bb-folder-destination {
+  cursor: pointer;
 }
 
-#bp-media-create-folder .bb-folder-location-select .bb-folder-location-select-list,
-#bp-media-edit-child-folder .bb-folder-location-select .bb-folder-location-select-list,
-#bp-media-create-child-folder .bb-folder-location-select .bb-folder-location-select-list {
+#bp-media-create-folder .location-folder-list-wrap-main .location-folder-list-wrap,
+#bp-media-edit-child-folder .location-folder-list-wrap-main .location-folder-list-wrap,
+#bp-media-create-child-folder .location-folder-list-wrap-main .location-folder-list-wrap {
   position: absolute;
-  left: -1px;
-  right: -1px;
   bottom: 40px;
-  margin: 0;
-  background-color: #fff;
+  left: 0;
+  right: 0;
+  background-color: #ffff;
   border-radius: 4px;
   box-shadow: 0 6px 24px 0 rgba(18, 43, 70, 0.08);
-  list-style: none;
-  display: none;
-  max-height: 320px;
-  max-height: 45vh;
-  overflow: auto;
-  padding: 0;
   z-index: 11;
+  display: none;
 }
 
-#bp-media-create-folder .bb-folder-location-select .bb-folder-location-select-list li,
-#bp-media-edit-child-folder .bb-folder-location-select .bb-folder-location-select-list li,
-#bp-media-create-child-folder .bb-folder-location-select .bb-folder-location-select-list li {
+#bp-media-create-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-title,
+#bp-media-edit-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-title,
+#bp-media-create-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-title {
+  padding: 15px 0;
+  display: inline-block;
+  margin-left: 10px;
+  vertical-align: middle;
+}
+
+#bp-media-create-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-back,
+#bp-media-edit-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-back,
+#bp-media-create-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-back {
+  display: none;
+  margin-left: 10px;
   cursor: pointer;
-  padding: 5px 10px;
+  vertical-align: middle;
 }
 
-#bp-media-create-folder .bb-folder-location-select .bb-folder-location-select-list li:hover, #bp-media-create-folder .bb-folder-location-select .bb-folder-location-select-list li.selected,
-#bp-media-edit-child-folder .bb-folder-location-select .bb-folder-location-select-list li:hover,
-#bp-media-edit-child-folder .bb-folder-location-select .bb-folder-location-select-list li.selected,
-#bp-media-create-child-folder .bb-folder-location-select .bb-folder-location-select-list li:hover,
-#bp-media-create-child-folder .bb-folder-location-select .bb-folder-location-select-list li.selected {
-  color: #007cff;
-  background-color: #f5f5f5;
+#bp-media-create-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-back i,
+#bp-media-edit-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-back i,
+#bp-media-create-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-back i {
+  display: inline-block;
+  vertical-align: middle;
 }
 
-#bp-media-create-folder .bb-folder-location-select .bb-folder-location-select-list li:before,
-#bp-media-edit-child-folder .bb-folder-location-select .bb-folder-location-select-list li:before,
-#bp-media-create-child-folder .bb-folder-location-select .bb-folder-location-select-list li:before {
+#bp-media-create-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list,
+#bp-media-edit-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list,
+#bp-media-create-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list {
+  overflow: auto;
+  max-height: 40vh;
+  min-height: 40vh;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#bp-media-create-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li,
+#bp-media-edit-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li,
+#bp-media-create-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li {
+  position: relative;
+}
+
+#bp-media-create-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span,
+#bp-media-edit-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span,
+#bp-media-create-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span {
+  padding: 10px 15px;
+  border-bottom: 1px solid #ccc;
+  display: block;
+  cursor: pointer;
+}
+
+#bp-media-create-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span:hover, #bp-media-create-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span.selected,
+#bp-media-edit-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span:hover,
+#bp-media-edit-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span.selected,
+#bp-media-create-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span:hover,
+#bp-media-create-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span.selected {
+  background-color: #ccc;
+}
+
+#bp-media-create-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span :before,
+#bp-media-edit-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span :before,
+#bp-media-create-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li span :before {
   font-family: dashicons;
   content: "\f318";
+  vertical-align: middle;
+  margin-right: 5px;
 }
 
-#bp-media-create-folder .bb-folder-location-select .bb-folder-location-select-list li.folder_l_1_1,
-#bp-media-edit-child-folder .bb-folder-location-select .bb-folder-location-select-list li.folder_l_1_1,
-#bp-media-create-child-folder .bb-folder-location-select .bb-folder-location-select-list li.folder_l_1_1 {
-  padding-left: 25px;
+#bp-media-create-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li:hover > .sub-menu-anchor,
+#bp-media-edit-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li:hover > .sub-menu-anchor,
+#bp-media-create-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li:hover > .sub-menu-anchor {
+  visibility: visible;
+  opacity: 1;
 }
 
-#bp-media-create-folder .bb-folder-location-select .bb-folder-location-select-list li.folder_l_1_1_1,
-#bp-media-edit-child-folder .bb-folder-location-select .bb-folder-location-select-list li.folder_l_1_1_1,
-#bp-media-create-child-folder .bb-folder-location-select .bb-folder-location-select-list li.folder_l_1_1_1 {
-  padding-left: 50px;
+#bp-media-create-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li .sub-menu-anchor,
+#bp-media-edit-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li .sub-menu-anchor,
+#bp-media-create-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li .sub-menu-anchor {
+  position: absolute;
+  right: 5px;
+  top: 50%;
+  bottom: 0;
+  background-color: #ccc;
+  padding: 2px 3px;
+  line-height: 1;
+  visibility: hidden;
+  opacity: 0;
+  cursor: pointer;
+  transform: translateY(-50%);
+  display: inline-block;
+  height: auto;
+  width: auto;
 }
 
-#bp-media-create-folder .bb-folder-location-select .bb-folder-location-select-list li.folder_l_1_1_1_1,
-#bp-media-edit-child-folder .bb-folder-location-select .bb-folder-location-select-list li.folder_l_1_1_1_1,
-#bp-media-create-child-folder .bb-folder-location-select .bb-folder-location-select-list li.folder_l_1_1_1_1 {
-  padding-left: 75px;
-}
-
-#bp-media-create-folder .bb-folder-location-select .bb-folder-location-select-list li.folder_l_1_1_1_1_1,
-#bp-media-edit-child-folder .bb-folder-location-select .bb-folder-location-select-list li.folder_l_1_1_1_1_1,
-#bp-media-create-child-folder .bb-folder-location-select .bb-folder-location-select-list li.folder_l_1_1_1_1_1 {
-  padding-left: 100px;
-}
-
-#bp-media-create-folder .bb-folder-location-select .bb-folder-location-select-list li.folder_l_1_1_1_1_1_1,
-#bp-media-edit-child-folder .bb-folder-location-select .bb-folder-location-select-list li.folder_l_1_1_1_1_1_1,
-#bp-media-create-child-folder .bb-folder-location-select .bb-folder-location-select-list li.folder_l_1_1_1_1_1_1 {
-  padding-left: 125px;
+#bp-media-create-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li ul,
+#bp-media-edit-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li ul,
+#bp-media-create-child-folder .location-folder-list-wrap-main .location-folder-list-wrap .location-folder-list li ul {
+  display: none;
+  margin: 0;
+  list-style: none;
 }
 
 /* BASICS */
