#266 - Destination Folder Location UI correction

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -1770,14 +1770,16 @@ img.emojioneemoji {
 		&:after{
 			content: "\f347";
 			font-family: dashicons;
-			color: #dedfe2;
+			color: #c4cbd1;
 			position: absolute;
 			right: 1em;
+			margin-right: 3px;
 			top: 50%;
 			pointer-events: none;
 			transform: translateY(-50%);
 			-webkit-transform: translateY(-50%);
 			-moz-transform: translateY(-50%);
+			font-size: 12px;
 		}
 		.bb-folder-destination{
 			cursor: pointer;
@@ -1787,15 +1789,15 @@ img.emojioneemoji {
 			bottom: 40px;
 			left: 0;
 			right: 0;
-			background-color: #ffff;
+			background-color: #fbfbfc;
 			border-radius: 4px;
 			box-shadow: 0 6px 24px 0 rgba(18,43,70,.08);
 			z-index: 11;
 			display: none;
 			.location-folder-title{
-				padding: 15px 0;
+				padding: 8px 0;
 				display: inline-block;
-				margin-left: 10px;
+				margin-left: 8px;
 				vertical-align: middle;
 			}
 			.location-folder-back{
@@ -1815,6 +1817,7 @@ img.emojioneemoji {
 				list-style: none;
 				margin: 0;
 				padding: 0;
+				background-color: #fff;
 				li{
 					position: relative;
 					span{
