#383 - url preview container style fixes

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -432,7 +432,6 @@
 .activity-link-preview-container {
 	padding: 25px;
 	line-height: 1.5;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	color: #82878c;
 	background: #fff;
 	border: 1px solid #e5e5e5;
@@ -445,6 +444,7 @@
 		border: 0;
 		border-radius: 0;
 		margin: 0;
+                padding: 0;
 		max-width: 640px;
 	}
 
@@ -550,6 +550,17 @@
 	right: 8px;
 	top: 8px;
 	text-decoration: none;
+
+        .activity-post-form-link-wp-embed & {
+            top: 30px;
+            left: 8px;
+            right: auto;
+            background: #fff;
+            z-index: 11;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+        }
 
 	@include medium-small-max() {
 		color: rgba(0, 0, 0, 1);
