--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -547,7 +547,7 @@
 	color: rgba(0, 0, 0, 0.4);
 	font-size: 16px;
 	position: absolute;
-	right: 8px;
+	left: 8px;
 	top: 8px;
 	text-decoration: none;
 
