--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1837,7 +1837,7 @@ input.search-query-input {
   color: rgba(0, 0, 0, 0.4);
   font-size: 16px;
   position: absolute;
-  right: 8px;
+  left: 8px;
   top: 8px;
   text-decoration: none;
 }
