--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1240,10 +1240,7 @@ a.layout-grid-view {
   display: flex;
   align-items: center;
   cursor: pointer;
-  border: 1px solid #E7E9EC;
   line-height: 1;
-  padding: 2px 2px 2px 4px;
-  border-radius: 3px;
 }
 
 .bb-media-privacy-wrap .privacy:before {
@@ -1317,7 +1314,7 @@ a.layout-grid-view {
   cursor: pointer;
   line-height: 1;
   margin: 0;
-  padding: 10px 15px;
+  padding: 10px 14px;
   position: relative;
   display: flex;
   align-items: center;
@@ -1341,7 +1338,9 @@ a.layout-grid-view {
   font-size: 16px;
   vertical-align: middle;
   display: inline-block;
-  margin-right: 8px;
+  margin-right: 10px;
+  width: 20px;
+  text-align: center;
 }
 
 .activity-privacy > li.onlyme:before {
